# SolGraph

./: .env.example  README.md  copier.yml
backend/app/alembic/: env.py
backend/app/core/: db.py
backend/app/core/model_provider_plugins/examples/openai_provider/: pyproject.toml
backend/app/core/workflow/node/code/: code_node.py
docker/: docker-compose.localbuild.yml  docker-compose.yml
docs/: Add_New_Model_Providers_Guide.md  Add_New_Tools_Guide.md
web/: openapi.json  openapi0120.json
web/docker/: pm2.json
web/src/app/(applayout)/dashboard/: page.tsx
web/src/app/login/: page.tsx
web/src/client/models/: UserOut.ts
web/src/components/Common/SideBar/: index.tsx
web/src/components/Common/TopBar/: Logo.tsx  index.tsx
